--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 
 <head>
 <title> YouTube(EarlyBird: HTML_website) </title>
+<script>
+name = prompt("너의 이름은?")
+alert("하이 "+name+"\n환영요~")
+document.write("<h3>하이 "+name+"<br>환영요~</h3>")
+</script>
+
 </head>
 
 
