--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
 <title> YouTube(EarlyBird: HTML_website) </title>
 <script>
-name = prompt("너의 이름은?")
-alert("하이 "+name+"\n환영요~")
-document.write("<h3>하이 "+name+"<br>환영요~</h3>")
+name = prompt("당신의 이름은?")
+alert(name+"!"+"\n"+"반가워")
+document.write("<h3><br>하이 "+name+"</h3>")
 </script>
 
 </head>
