--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <script>
 name = prompt("당신의 이름은?")
 alert(name+"!"+"\n"+"반가워")
-document.write("<h3><br>하이 "+name+"</h3>")
+document.write("<h3>하이 "+name</h3>)
 </script>
 
 </head>
