--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <title> YouTube(EarlyBird: HTML_website) </title>
 <script>
-name = prompt("당신의 이름은?")
+name = prompt("당신의 이름은?", "uijun")
 alert(name+"!"+"\n"+"반가워")
 document.write("<h3>하이 "+name"</h3>")
 </script>
