--- a/hello.html
+++ b/hello.html
@@ -11,6 +11,9 @@ Hello
 <script>
 name = prompt("What's ur name?", "Enter your name!")
 document.write("<h2>"+"HELLO "+name+"</h2>")
+ if (name == "uijun"){
+   alert("Master")
+ }
 </script>
 
 </body>
