--- a/hello.html
+++ b/hello.html
@@ -10,7 +10,7 @@ Hello
 
 <script>
 name = prompt("What's ur name?", "Enter your name!")
-document.write("<h2>"+"HELLO "+name+"</h2>")
+document.write("<h2>"+"HELLO! "+name+"</h2>")
  if (name == "uijun"){
    alert("Master")
  }
