--- a/hello.html
+++ b/hello.html
@@ -10,9 +10,12 @@ Hello
 
 <script>
 name = prompt("What's ur name?", "Enter your name!")
-document.write("<h2>"+"HELLO! "+name+"</h2>")
- if (name == "uijun"){
-   alert("Master")
+ if (name == "uijun" or "민의준"){
+   document.write("<h2>"+"HELLO! "+name+"</h2>")
+ }
+ else (){
+  document.write("<h1> 뭐야 이 찌끄레기는 저리 꺼져! </h1>")
+  window.close()
  }
 </script>
 
