--- a/hello.html
+++ b/hello.html
@@ -14,7 +14,7 @@ name = prompt("What's ur name?", "Enter your name!")
    document.write("<h2>"+"HELLO! "+name+"</h2>")
  }
  else (){
-  document.write("<h1> 뭐야 이 찌끄레기는 저리 꺼져! </h1>")
+  document.write("<h1>"+"뭐야 이 찌끄레기는 저리 꺼져!"+"</h1>")
   window.close()
  }
 </script>
