--- a/hello.html
+++ b/hello.html
@@ -13,7 +13,7 @@ name = prompt("What's ur name?", "Enter your name!")
  if (name == "uijun" or "민의준"){
    document.write("<h2>"+"HELLO! "+name+"</h2>")
  }
- else if (name != "uijun" or "민의준"){
+ if (name != "uijun" or "민의준"){
   document.write("<h1>"+"뭐야 이 찌끄레기는 저리 꺼져!"+"</h1>")
   window.close()
  }
