--- a/hello.html
+++ b/hello.html
@@ -9,8 +9,13 @@ Hello
 <h6>hello</h6>
 
 <script>
-name = prompt("What's ur name?", "Enter your name!")
-document.write("<h2>"+"HELLO! "+name+"</h2>")
+name = prompt("What's ur name?", "Enter your name!");
+if (name == "uijun"){
+  document.write("<h2>"+"HELLO! "+name+"</h2>");
+} else {
+  alert("넌 뭐야");
+}
+
 </script>
 
 </body>
