--- a/hello.html
+++ b/hello.html
@@ -10,10 +10,11 @@ Hello
 
 <script>
 name = prompt("What's ur name?", "Enter your name!");
-if (name == "uijun"){
+if (name == "uijun" || "민의준"){
   document.write("<h2>"+"HELLO! "+name+"</h2>");
 } else {
-  alert("넌 뭐야");
+  alert("넌 뭐야 꺼져");
+  window.close();
 }
 
 </script>
