--- a/hello.html
+++ b/hello.html
@@ -10,7 +10,7 @@ Hello
 
 <script>
 name = prompt("What's ur name?", "Enter your name!");
-if (name == "uijun" || "민의준"){
+if (name == "uijun" || name == "민의준"){
   document.write("<h2>"+"HELLO! "+name+"</h2>");
 } else {
   alert("넌 뭐야 꺼져");
