--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@ document.write("<h3>하이 "+name+"</h3>")
 
 <br/>
 <a href="https://Youtube.com">유튜브</a>
-
+<a href="hello.html">If</a>
+<a href="if.html">If</a>
+<a href="for.html">For</a>
 <br/>
 <b><i>구독</i></b>
 
