--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@ document.write("<h3>하이 "+name+"</h3>")
 <hr>
 
 <br/>
-<a href="https://Youtube.com">유튜브</a>
-<a href="hello.html">If</a>
-<a href="if.html">If</a>
+<a href="https://Youtube.com">유튜브</a> <br>
+<a href="hello.html">If</a> <br>
+<a href="if.html">If</a> <br>
 <a href="for.html">For</a>
 <br/>
 <b><i>구독</i></b>
