--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ document.write("<h3>하이 "+name+"</h3>")
 
 <br/>
 <a href="https://Youtube.com">유튜브</a> <br>
-<a href="hello.html">If</a> <br>
+<a href="hello.html">Hello</a> <br>
 <a href="if.html">If</a> <br>
 <a href="for.html">For</a>
 <br/>
