--- a/for.html
+++ b/for.html
@@ -11,7 +11,8 @@ for(i=1;i<=n;i++){
     sum1_n+= i;
 }
 document.write(sum1_n+"<br>");
-document.write(new Date())
+document.write(new Date()) <br>
+<a href="index.html">Index</a>
 </script>
 </body>
 
