--- a/for.html
+++ b/for.html
@@ -11,9 +11,9 @@ for(i=1;i<=n;i++){
     sum1_n+= i;
 }
 document.write(sum1_n+"<br>");
-document.write(new Date()) <br>
-<a href="index.html">Index</a>
+document.write(new Date())
 </script>
+<br> <a href="index.html">Index</a>
 </body>
 
 </html>
