--- a/hello.html
+++ b/hello.html
@@ -7,7 +7,6 @@
 <h1>HELLO</h1>
 Hello
 <h6>hello</h6>
-<a href="index.html">Index</a>
   
 <script>
 name = prompt("What's ur name?", "Enter your name!");
@@ -18,7 +17,7 @@ if (name == "uijun" || name == "민의준"){
 }
 
 </script>
-
+<br> <a href="index.html">Index</a>
 </body>
 
 </html>
