--- a/for.html
+++ b/for.html
@@ -11,7 +11,7 @@ for(i=1;i<=n;i++){
     sum1_n+= i;
 }
 document.write(sum1_n+"<br>");
-document.write(new Date())
+document.write(new Date()+"<br>")
 </script>
 <br> <a href="index.html">Index</a>
 </body>
