--- a/hello.html
+++ b/hello.html
@@ -17,7 +17,7 @@ if (name == "uijun" || name == "민의준"){
 }
 
 </script>
-<br> <a href="index.html">Index</a>
+<a href="index.html">Index</a>
 </body>
 
 </html>
