--- a/if.html
+++ b/if.html
@@ -10,11 +10,11 @@ aa = parseFloat(a)
 bb = parseFloat(b)
 document.write("Input data is "+aa+" and "+bb+"<br>")
 if (aa > bb) {
-	document.write(aa + "is bigger than" + bb)
+	document.write(aa + "is bigger than" + bb+"<br>")
 } else if (aa < bb) {
-	document.write(bb + " is bigger than " + aa)
+	document.write(bb + " is bigger than " + aa+"<br>")
 } else if (aa == bb) {
-	document.write(aa + " is as big as " + bb)
+	document.write(aa + " is as big as " + bb+"<br>")
 }
 
 </script>
