--- a/if.html
+++ b/if.html
@@ -4,13 +4,13 @@
 </head>
 <body>
 <script>
-a = prompt("정수")
-b = prompt("정수")
+a = prompt("정수나 소수")
+b = prompt("정수나 소수")
 aa = parseFloat(a)
 bb = parseFloat(b)
 document.write("Input data is "+aa+" and "+bb+"<br>")
 if (aa > bb) {
-	document.write(aa + "is bigger than" + bb+"<br>")
+	document.write(aa + " is bigger than " + bb+"<br>")
 } else if (aa < bb) {
 	document.write(bb + " is bigger than " + aa+"<br>")
 } else if (aa == bb) {
