--- a/function.html
+++ b/function.html
@@ -22,7 +22,7 @@ arr_2 = parseFloat(prompt ("세번째 수"))
 
 arr = [arr_0, arr_1, arr_2];
 r= max(arr);
-document.write(r+"<br>"); //최댓값리턴
+document.write(r+"is the biggest number"+"<br>"); //최댓값리턴
 
 for(k=0;k<10;k++){
    printhello();
