--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@ document.write("<h3>하이 "+name+"</h3>")
 <a href="https://Youtube.com">유튜브</a> <br>
 <a href="hello.html">Hello</a> <br>
 <a href="if.html">If</a> <br>
-<a href="for.html">For</a>
+<a href="for.html">For</a><br>
+<a href="yourname.html">Tongue twister</a>
 <br/>
 <b><i>구독</i></b>
 
