--- a/yourname.html
+++ b/yourname.html
@@ -5,14 +5,14 @@ Tongue twister
 
 <body>
 <center>
-  <h1> 친구들 이름 불러주기</h1>
+  <h1> 잰말놀이</h1>
 
   <input type="button" id="tajaStart" value="종료">
   <input type="checkbox" id="sori">소리끄기<br>
   <input type="button" value="점수">
   <input type="text" id="tajaPoints" size=7><br>
   <progress id="rTime" value=100 max=100> </progress><br>
-  <input type="text" id="target" size=500>
+  <input type="text" id="target" size=30>
   <label id="alias"></label><br>
   <input type="text" id="inputTyping" size=18><br>
 </center>
