--- a/yourname.html
+++ b/yourname.html
@@ -1,6 +1,9 @@
 <html>
 <head>
 <title>Tongue twister</title>
+<meta charset="UTF-8">
+<meta name="viewport"
+  content="width=device-width, initial-scale=2.0">
 </head>
 
 <body>
