--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@ document.write("<h3>하이 "+name+"</h3>")
 <a href="hello.html">Hello</a> <br>
 <a href="if.html">If</a> <br>
 <a href="for.html">For</a><br>
+<a href="function.html">Function</a><br>
+<a href="chat.html">Chat</a><br>
 <a href="yourname.html">Tongue twister</a>
 <br/>
 <b><i>구독</i></b>
